--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Love Confession</title>
+    <title>an untold secret</title>
 </head>
 <body>
     <div class="hearts-container">
@@ -23,6 +23,12 @@
     <div class="typewriter">
         <p id="typewriter-text"></p>
     </div>
-    
+    <div class="love-letter" id="letter-click">
+        <div class="loveletter"><img src="img/love-envelope.png" alt="loveletter"></div>
+    </div>
+    <div class="love-content" id="letter-content">
+        <img src="img/letter-content.png" alt="letter-content">
+    </div>    
 </body>
+<footer>© kapal</footer>
 </html>
