--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
         <img src="img/letter-content.png" alt="letter-content">
     </div>    
 </body>
-<footer>© kapal</footer>
+<footer>© AISKOFII</footer>
 </html>
