--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
         <img src="img/letter-content.png" alt="letter-content">
     </div>    
 </body>
-<footer>© AISKOFII</footer>
+<footer>
+    <p>© 2025 AISKOFII. All rights reserved.</p>
+</footer>
 </html>
