--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="hearts-container">
-        <div class="heart heart1" data-text="You are my sunshine."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart2" data-text="I love you more than words can say."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart3" data-text="You make my heart skip a beat."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart4" data-text="You are my everything."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart5" data-text="I cherish every moment with you."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart6" data-text="You are my one and only."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart7" data-text="I am so lucky to have you."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart8" data-text="You complete me."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart9" data-text="You are my dream come true."><img src="img/pixel-heart.gif" alt="heart"></div>
-        <div class="heart heart10" data-text="I love you to the moon and back."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart1" data-text="You are my first love."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart2" data-text="My last."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart3" data-text="My only."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart4" data-text="And my everything."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart5" data-text="Even if we're apart,"><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart6" data-text="You always have a special place in my heart."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart7" data-text="I am forever lucky,"><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart8" data-text="To have you in my life."><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart9" data-text="You are my 'dreams come true.'"><img src="img/pixel-heart.gif" alt="heart"></div>
+        <div class="heart heart10" data-text="Thank you for being a part of my life."><img src="img/pixel-heart.gif" alt="heart"></div>
     </div>
     <div class="typewriter">
         <p id="typewriter-text"></p>
